src/styles/form.css
dialog {
    border: none;
    border-radius: 6px;
    overflow: hidden;
}
form {
    color: var(--border-color);
    color:rgb(82, 82, 82);
    font-size: 1.3rem;
}
#newListDialog {
    padding: 35px 12px 40px 10px;
    & form {
        overflow: hidden;
        max-width: 100%;
    }
}
fieldset {
    border: none;
}
ul {
    list-style: none;
    padding:0;
    margin: 0;
}
li+li {
    margin-top: 1rem;
}
label {
    display: inline-block;
    width: 95px;
    line-height: 2.2rem;
}
input, select {
    appearance: none;
    box-sizing: border-box;
    height: 1.9rem;
    border: solid 2px var(--input-color);
    border-radius: 4px;
    font-size: 1.2rem;
    color:var(--text-color);
    width:100%;
    background-color: white;
}
input[type=date] {
    font-family: Arial, Helvetica, sans-serif;
}
input:focus {
    outline:solid 1px var(--input-color);
}
.buttonsRow>button {
    border:none;
    border-radius: 4px;
    color:white;
    background-color: var(--button-color);
    padding: .3rem .9rem;
    font-size: 1.3rem;
    margin-top: 16px;
}
.buttonsRow>button:hover{
    background-color: var(--button-hover-color);
}
.buttonsRow {
    display: flex;
    justify-content: space-between;
}
#newColorDialog {
    border: none;
    border-radius: 6px;
    padding:10px 10px 15px 10px;
    width:60%;
    max-width: 280px;
}
#newColorForm {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap:18px;
    padding:0;
}
#closeDialog {
    background-color: white;
    color:var(--button-color);
    border:2.5px solid var(--border-color);
    border-radius: 3px;
    padding:1px 3px 1px 3px;
    align-self:flex-end;
    font-style: bold;
    font-size: 1.3rem;
}
#newColorDialog ul li {
    display: inline-block;
    margin: 0;
}
#newColorForm ul {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
}
li.circle {
    height: 35px;
    width:35px;
    border-radius: 50%;
    display: block;

}
li.circle:hover {
    cursor: pointer;
}
.circle-blue {
    background-color:blue;
}
.circle-green {
    background-color:green;
}
.circle-orange {
    background-color:orange;
}
.circle-grey {
    background-color:grey;
}
.circle-black {
    background-color:black;
}


#confirmDeleteDialog {
    white-space: pre-line;
    padding:30px;
}
.deletConfirmMsg {
    font-size: 1.3rem;
    white-space: pre-line;
    line-height: 1.5rem;
}
#confirmDeleteDialog button {
    font-size: 1rem;
}
#confirmDeleteDialog .buttonsRow {
    margin-top: 10px;
}

@media screen and (max-width:490px) {
    .newListForm {
        margin:0;
        padding:0;
    }
    .newItemForm {
        height: 100vh;
    }
    form {
        color: var(--border-color);
        color:rgb(82, 82, 82);
        font-size: 1.3rem;
        padding:0;
    }
    input, select {
        width:100%;
    }
    fieldset {
        padding: 0;
    }
    button {
        border: none;
    }

}

